Replace M3 Mutons' LEU with Marauder

--- a/LongWarOfTheChosen/Config/XComAI.ini
+++ b/LongWarOfTheChosen/Config/XComAI.ini
@@ -792,7 +792,7 @@ MAX_SURPRISED_SCAMPER_PATH_LENGTH=7		; Scamper paths longer than this number of 
 	Child[7]=TryBayonetCharge, \\
 	Child[8]=NeedsReload, \\
 	Child[9]=SelectMoveProfileByJob, \\
-	Child[10]=TryLEUOrReload, \\
+	Child[10]=TryShootOrReload, \\
 	Child[11]=TryWarCryOnFewTargets, \\
 	Child[12]=HuntEnemyWithCover)
 
@@ -802,16 +802,16 @@ MAX_SURPRISED_SCAMPER_PATH_LENGTH=7		; Scamper paths longer than this number of 
 	Child[1]=TryHighPriorityShot, \\
 	Child[2]=TryGrenade, \\
 	Child[3]=TrySuppressClosest, \\
-	Child[4]=TryLEUOrReloadOrOverwatch, \\
+	Child[4]=TryShootOrReloadOrOverwatch, \\
 	Child[5]=HuntEnemyWithCover, \\
 	Child[6]=SelectMove_JobOrAggressive)
 
-+Behaviors=(BehaviorName=RandFilterTryLEU, NodeType=RandFilter, Child[0]=LEUIfAvailable, Param[0]=60)
++Behaviors=(BehaviorName=RandFilterTryLEU, NodeType=RandFilter, Child[0]=ShootIfAvailable, Param[0]=60)
 
-+Behaviors=(BehaviorName=TryLEUOrReload, NodeType=Selector, Child[0]=LEUIfAvailable, Child[1]=NeedsReload)
-+Behaviors=(BehaviorName=TryLEUOrReloadOrOverwatch, NodeType=Selector, Child[0]=ConsiderTakingOverwatch, Child[1]=LEUIfAvailable, Child[2]=NeedsReload)
-+Behaviors=(BehaviorName=LEUIfAvailable, NodeType=Sequence, Child[0]=IsAbilityAvailable-LightEmUp, Child[1]=SelectTargetForLEU, Child[2]=SelectAbility-LightEmUp)
-+Behaviors=(BehaviorName=SelectTargetForLEU, NodeType=Sequence, Child[0]=SetTargetStack-LightEmUp, Child[1]=GenericSelectBestTarget, Child[2]=HasValidTarget-LightEmUp)
++Behaviors=(BehaviorName=TryShootOrReload, NodeType=Selector, Child[0]=ShootIfAvailable, Child[1]=NeedsReload)
++Behaviors=(BehaviorName=TryShootOrReloadOrOverwatch, NodeType=Selector, Child[0]=ConsiderTakingOverwatch, Child[1]=ShootIfAvailable, Child[2]=NeedsReload)
++Behaviors=(BehaviorName=ShootIfAvailable, NodeType=Sequence, Child[0]=IsAbilityAvailable-StandardShot, Child[1]=SelectTargetForLEU, Child[2]=SelectAbility-StandardShot)
++Behaviors=(BehaviorName=SelectTargetForLEU, NodeType=Sequence, Child[0]=SetTargetStack-StandardShot, Child[1]=GenericSelectBestTarget, Child[2]=HasValidTarget-StandardShot)
 
 ; ---------------- Personal Shield (MutonM3_LW, Elite) --------------------------------------------
 +Behaviors=(BehaviorName=TryPersonalShield, NodeType=Sequence, Child[0]=IsAbilityAvailable-PersonalShield, Child[1]=SelectAbility-PersonalShield)
