Replace Light 'em Up with Marauder in XCOM classes

--- a/LongWarOfTheChosen/Config/XComClassData.ini
+++ b/LongWarOfTheChosen/Config/XComClassData.ini
@@ -83,7 +83,7 @@ NumInDeck=0
 							   (AbilityName="Executioner_LW", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 							   (AbilityName="CyclicFire", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 							   (AbilityName="TrenchWarfare_LW", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
-							   (AbilityName="LightemUp", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
+							   (AbilityName="SkirmisherStrike", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 							   (AbilityName="HeavyFrags"), \\
 							   (AbilityName="VolatileMix"), \\
 							   (AbilityName="LowProfile"), \\
@@ -314,7 +314,7 @@ NumInDeck=0
 
 +RandomAbilityDecks=(DeckName="Tier3_XComAbilities", \\
 					Abilities=((AbilityName="RunAndGun_LW"), \\
-							   (AbilityName="Lightemup", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
+							   (AbilityName="SkirmisherStrike", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 							   (AbilityName="LightningReflexes_LW"), \\
 							   (AbilityName="Shredder", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 							   (AbilityName="WatchThemRun_LW", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
@@ -534,7 +534,7 @@ NumInDeck=0
 
 +RandomAbilityDecks=(DeckName="Tier3_XComAbilities", \\
 					Abilities=((AbilityName="RunAndGun_LW"), \\
-							   (AbilityName="Lightemup", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
+							   (AbilityName="SkirmisherStrike", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 							   (AbilityName="LightningReflexes_LW"), \\
 							   (AbilityName="SmokeGrenade"), \\
 							   (AbilityName="Flashbanger"), \\
@@ -1060,7 +1060,7 @@ NumInDeck=0
 ; squaddie
 +SoldierRanks=(	AbilitySlots=(	(AbilityType=(AbilityName="PointBlank",			ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
 								(AbilityType=(AbilityName="BothBarrels",			ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
-								(AbilityType=(AbilityName="LightEmUp",			ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)) \\
+								(AbilityType=(AbilityName="SkirmisherStrike",			ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)) \\
 							 ), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=5), (StatType=eStat_Will,StatAmount=4), (StatType=eStat_CombatSims,StatAmount=1)) \\
 			)
@@ -1608,7 +1608,7 @@ NumInDeck=0
 
 +RandomAbilityDecks=(DeckName="Tier2_XComAbilities", \\
 					Abilities=((AbilityName="CombatEngineer"), \\
-							   (AbilityName="LightEmUp", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
+							   (AbilityName="SkirmisherStrike", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 							   (AbilityName="LowProfile"), \\
 							   (AbilityName="RapidDeployment"), \\
 							   (AbilityName="TrenchWarfare_LW", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
@@ -1864,7 +1864,7 @@ NumInDeck=0
 							   (AbilityName="HitandRun", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 							   (AbilityName="CyclicFire", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 							   (AbilityName="TraverseFire", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
-							   (AbilityName="LightEmUp", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
+							   (AbilityName="SkirmisherStrike", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 							   (AbilityName="HailofBullets", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 							   (AbilityName="FullKit",  ApplyToWeaponSlot=eInvSlot_Unknown), \\
 							   (AbilityName="Aggression",  ApplyToWeaponSlot=eInvSlot_Unknown), \\
@@ -2549,7 +2549,7 @@ bHasClassMovie=true
 							   (AbilityName="ApexPredator_LW", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 							   (AbilityName="HuntersInstinct", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 							   (AbilityName="RapidReaction", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
-							   (AbilityName="LightEmUp", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon) \\
+							   (AbilityName="SkirmisherStrike", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon) \\
 					))
 
 !SoldierRanks=()
