--- a/LongWarOfTheChosen/Config/XComLW_Outposts.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Outposts.ini
@@ -85,7 +85,7 @@ REQUIRED_RANK_FOR_LIAISON_DUTY=1
 +REBEL_AWC_ABILITIES_OFFENSE=(Level=1, AbilityName="Shredder",				ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)
 +REBEL_AWC_ABILITIES_OFFENSE=(Level=1, AbilityName="HoloTargeting",		    ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)
 +REBEL_AWC_ABILITIES_OFFENSE=(Level=1, AbilityName="BringEmOn",				ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)
-+REBEL_AWC_ABILITIES_OFFENSE=(Level=1, AbilityName="LightemUp",				ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)
++REBEL_AWC_ABILITIES_OFFENSE=(Level=1, AbilityName="SkirmisherStrike",				ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)
 +REBEL_AWC_ABILITIES_OFFENSE=(Level=1, AbilityName="NeedleGrenades",		ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)
 +REBEL_AWC_ABILITIES_OFFENSE=(Level=1, AbilityName="OpenFire_LW",		    ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)
 +REBEL_AWC_ABILITIES_OFFENSE=(Level=1, AbilityName="HuntersInstinct",		ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)
