Add config toggles for Vulture unlock FL, GTS mode

--- a/LongWarOfTheChosen/Config/XComLW_Activities.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Activities.ini
@@ -898,6 +898,11 @@ COINOPS_MIN_VIGILANCE=3
 ; max alert for covert ops missions
 BIGSUPPLYEXTRACTION_MAX_ALERT=8
 
+; new Vulture settings
+
+bENABLE_AUTO_VULTURE = true
+VULTURE_UNLOCK_AT_FL = 3
+
 ; How much knowledge about XCOM a Chosen gains when a mission
 ; is completed in their region
 CHOSEN_KNOWLEDGE_GAIN_MISSIONS=0
