--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -1586,7 +1586,7 @@ AutopsyAdventPsiWitchIntelCost=0
 +GTSUnlocksToRemove="MeditationPreparationUnlock"
 +GTSUnlocksToRemove="ParkourUnlock"
 +GTSUnlocksToRemove="InfiltrationUnlock"
-+GTSUnlocksToRemove="VultureUnlock"
+;+GTSUnlocksToRemove="VultureUnlock"
 
 ; GTS edits
 +GTSTable=(GTSProjectTemplateName="VengeanceUnlock",			SupplyCost=25,	RankRequired=0,		HideIfInsufficientRank=false,	UniqueClass="");
