Nerf Knife Reaper tree a bit
Swift Throw up 1 rank.  Nerfed Tactical Retreat to top rank XCOM deck. Bluescreen knives back in the main tree. Aim Assist added back to the Rank 4 xcom deck.

--- a/LongWarOfTheChosen/Config/XComClassData.ini
+++ b/LongWarOfTheChosen/Config/XComClassData.ini
@@ -2522,7 +2522,7 @@ bHasClassMovie=true
 								(AbilityName="Sting", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 								(AbilityName="BringEmOn"), \\
 								(AbilityName="Needle", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
-								(AbilityName="BlueScreenKnives", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon) \\
+								(AbilityName="AimAssist_LW") \\
 					))
 
 +RandomAbilityDecks=(DeckName="Rank5_XComAbilities", \\
@@ -2543,7 +2543,7 @@ bHasClassMovie=true
 					))
 
 +RandomAbilityDecks=(DeckName="Rank7_XComAbilities", \\
-					Abilities=((AbilityName="Implacable"), \\
+					Abilities=((AbilityName="TacticalRetreat_LW"), \\
 							   (AbilityName="ChainShot", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 							   (AbilityName="Concentration_LW", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 							   (AbilityName="ApexPredator_LW", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
@@ -2577,7 +2577,7 @@ bHasClassMovie=true
 
 ; SGT
 +SoldierRanks=(AbilitySlots=((AbilityType=(AbilityName="InTheZone", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
-							(AbilityType=(AbilityName="SwiftThrow_LW", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
+							(AbilityType=(AbilityName="BlueScreenKnives", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
 							(AbilityType=(AbilityName="SilentKiller", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 							(RandomDeckName="Rank3_XComAbilities"), \\
 							(AbilityType=(AbilityName="Quickdraw",		ApplyToWeaponSlot=eInvSlot_Pistol))), \\
@@ -2585,7 +2585,7 @@ bHasClassMovie=true
 
 ; SSGT 
 +SoldierRanks=(AbilitySlots=((AbilityType=(AbilityName="CheapShot", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
-							(AbilityType=(AbilityName="TacticalRetreat_LW")), \\
+							(AbilityType=(AbilityName="SwiftThrow_LW", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
 							(AbilityType=(AbilityName="Reposition_LW",  ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 							(RandomDeckName="Rank4_XComAbilities"), \\
 							(AbilityType=(AbilityName="LightningHands",		ApplyToWeaponSlot=eInvSlot_Pistol))), \\
