Tweak Advent Grenadier AI a bit
Fixes possible typo with the same behavior twice in the same AP selector. Give them the ability to use grenade first action if they have a good one, adjust their movement profile a bit so that it will try to move for grenade rather than job/defensive

--- a/LongWarOfTheChosen/Config/XComAI.ini
+++ b/LongWarOfTheChosen/Config/XComAI.ini
@@ -862,10 +862,10 @@ MAX_SURPRISED_SCAMPER_PATH_LENGTH=7		; Scamper paths longer than this number of 
 +Behaviors=(BehaviorName=LWAdventGrenadierRedFirstAction, NodeType=Sequence, Child[0]=NotLastActionPoint, Child[1]=LWAdventGrenadierRedFirstActionSelector)
 +Behaviors=(BehaviorName=LWAdventGrenadierRedFirstActionSelector, NodeType=Selector, \\
 	Child[0]=DoIfFlankedMove, \\
-	Child[1]=TryMoveThenGrenadeLauncher, \\
+	Child[1]=TryGrenadeLauncher, \\
 	Child[2]=NeedsReload, \\
-	Child[3]=SelectMove_JobOrDefensive, \\
-	Child[4]=TryMoveThenGrenadeLauncher, \\
+	Child[3]=TryMoveThenGrenadeLauncher, \\
+	Child[4]=MoveDefensive, \\
 	Child[5]=TryShootOrReloadOrOverwatch, \\
 	Child[6]=HuntEnemyWithCover)
 
