Redo Chosen Strengths
All chosen have 5 per tier now.
Chosen Assassin CCS moved from T2 to T3 (can't be rolled before FL15 now).
some other shuffled. Hunter had a lot of meh stuff trimmed.

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -372,23 +372,19 @@ bNerfFrostLegion = false
 ; Set this to true to disable LW's diversity system entirely (except for the necessary use for Level 5 chosen implementation)
 bDisableDiversitySystem = false
 
-+HUNTER_STRENGTHS_T1=(Strength=Predator_LW, Weight=2.0f)
+; Hunter
+;FL5
+
 +HUNTER_STRENGTHS_T1=(Strength=ChosenBleedingRounds, Weight=1.0f) 
 +HUNTER_STRENGTHS_T1=(Strength=BlastShield, Weight=1.0f)
-+HUNTER_STRENGTHS_T1=(Strength=Executioner_LW, Weight=1.0f)
-+HUNTER_STRENGTHS_T1=(Strength=InstantReactionTime, Weight=1.0f)
-+HUNTER_STRENGTHS_T1=(Strength=ChosenHoloTargeting, Weight=1.0f)
 +HUNTER_STRENGTHS_T1=(Strength=ChosenVenomRounds, Weight=1.0f)
 +HUNTER_STRENGTHS_T1=(Strength=DamageControl, Weight=1.0f)
++HUNTER_STRENGTHS_T1=(Strength=ChosenAllSeeing, Weight=1.0f)
 
 ; Fl10
-+HUNTER_STRENGTHS_T2=(Strength=LightningHands, Weight=1.0f)
-+HUNTER_STRENGTHS_T2=(Strength=ChosenDragonRounds, Weight=1.0f)
 +HUNTER_STRENGTHS_T2=(Strength=HazmatVestBonus_LW, Weight=1.0f)
 +HUNTER_STRENGTHS_T2=(Strength=PsychoticRage_LW, Weight=1.0f)
 +HUNTER_STRENGTHS_T2=(Strength=Faceoff, Weight=1.0f)
-+HUNTER_STRENGTHS_T2=(Strength=ChosenAllSeeing, Weight=3.0f)
-+HUNTER_STRENGTHS_T2=(Strength=StingGrenades, Weight=1.0f)
 +HUNTER_STRENGTHS_T2=(Strength=RuptureImmunity, Weight=1.0f)
 +HUNTER_STRENGTHS_T2=(Strength=HeroSlayer_LW, Weight=1.0f)
 
@@ -396,7 +392,10 @@ bDisableDiversitySystem = false
 +HUNTER_STRENGTHS_T3=(Strength=YouCannotHide_LW, Weight=1.0f)
 +HUNTER_STRENGTHS_T3=(Strength=TriggerBot, Weight=1.0f)
 +HUNTER_STRENGTHS_T3=(Strength=OverBearingSuperiority_LW, Weight=1.0f)
++HUNTER_STRENGTHS_T3=(Strength=ChosenDragonRounds, Weight=1.0f)
++HUNTER_STRENGTHS_T3=(Strength=StingGrenades, Weight=1.0f)
 
+; Assassin
 ;FL5
 +ASSASSIN_STRENGTHS_T1=(Strength=BlastShield, Weight=1.0f)
 +ASSASSIN_STRENGTHS_T1=(Strength=DamageControl, Weight=1.0f)
@@ -404,37 +403,32 @@ bDisableDiversitySystem = false
 +ASSASSIN_STRENGTHS_T1=(Strength=Sprinter, Weight=1.0f)
 +ASSASSIN_STRENGTHS_T1=(Strength=InstantReactionTime, Weight=1.0f)
 
-
 ;FL10
 +ASSASSIN_STRENGTHS_T2=(Strength=ReturnFire, Weight=1.0f)
-+ASSASSIN_STRENGTHS_T2=(Strength=CloseCombatSpecialist, Weight=1.0f)
 +ASSASSIN_STRENGTHS_T2=(Strength=PsychoticRage_LW, Weight=1.0f)
 +ASSASSIN_STRENGTHS_T2=(Strength=MistyMadness_LW, Weight=1.0f)
 +ASSASSIN_STRENGTHS_T2=(Strength=HeroSlayer_LW, Weight=1.0f)
 +ASSASSIN_STRENGTHS_T2=(Strength=RuptureImmunity, Weight=1.0f)
-
 
 ;FL15
 +ASSASSIN_STRENGTHS_T3=(Strength=AssassinBladestorm, Weight=1.0f)
 +ASSASSIN_STRENGTHS_T3=(Strength=HazmatVestBonus_LW, Weight=1.0f)
 +ASSASSIN_STRENGTHS_T3=(Strength=BloodBath_LW, Weight=1.0f)
 +ASSASSIN_STRENGTHS_T3=(Strength=Impenetrable_LW, Weight=1.0f)
++ASSASSIN_STRENGTHS_T3=(Strength=CloseCombatSpecialist, Weight=1.0f)
 
+; Warlock
 ;FL 5
++WARLOCK_STRENGTHS_T1=(Strength=ChosenAllSeeing, Weight=1.0f)
 +WARLOCK_STRENGTHS_T1=(Strength=BlastShield, Weight=1.0f)
-+WARLOCK_STRENGTHS_T1=(Strength=Infighter, Weight=1.0f)
 +WARLOCK_STRENGTHS_T1=(Strength=ChosenHoloTargeting, Weight=1.0f)
-+WARLOCK_STRENGTHS_T1=(Strength=SkirmisherStrike, Weight=1.0f)
 +WARLOCK_STRENGTHS_T1=(Strength=DamageControl, Weight=1.0f)
-+WARLOCK_STRENGTHS_T1=(Strength=InstantReactionTime, Weight=1.0f)
-+WARLOCK_STRENGTHS_T1=(Strength=Concentration_LW, Weight=2.0f)
++WARLOCK_STRENGTHS_T1=(Strength=ChosenImmuneMelee, Weight=1.0f)
 
 ;FL 10
-
-+WARLOCK_STRENGTHS_T2=(Strength=ChosenImmuneMelee, Weight=1.0f)
-+WARLOCK_STRENGTHS_T2=(Strength=ChosenAllSeeing, Weight=1.0f)
++WARLOCK_STRENGTHS_T2=(Strength=InstantReactionTime, Weight=1.0f)
++WARLOCK_STRENGTHS_T2=(Strength=HeroSlayer_LW, Weight=1.0f)
 +WARLOCK_STRENGTHS_T2=(Strength=PsychoticRage_LW, Weight=1.0f)
-+WARLOCK_STRENGTHS_T2=(Strength=OverBearingSuperiority_LW, Weight=1.0f)
 +WARLOCK_STRENGTHS_T2=(Strength=RuptureImmunity, Weight=1.0f)
 +WARLOCK_STRENGTHS_T2=(Strength=HeroSlayer_LW, Weight=1.0f)
 
@@ -442,6 +436,8 @@ bDisableDiversitySystem = false
 +WARLOCK_STRENGTHS_T3=(Strength=UnholyAscension_LW, Weight=1.0f)
 +WARLOCK_STRENGTHS_T3=(Strength=HazmatVestBonus_LW, Weight=2.0f)
 +WARLOCK_STRENGTHS_T3=(Strength=MindScorchDangerZone, Weight=1.0f)
++WARLOCK_STRENGTHS_T2=(Strength=OverBearingSuperiority_LW, Weight=1.0f)
++WARLOCK_STRENGTHS_T3=(Strength=Concentration_LW, Weight=1.0f)
 
 ; Minimum force level before the Lost can start appearing (by difficulty)
 MIN_FL_FOR_LOST[0]=5
