--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -1062,8 +1062,18 @@ UNHOLY_ASCENSION_MOD = 2.0
 
 IMPACT_COMPENSATION_PCT_DR=0.25
 IMPACT_COMPENSATION_MAX_STACKS=4
-IMPACT_V2_DAMAGE_CAP=0.4
-IMPACT_V2_PCT_DR=0.8
+
+; Difficulty based scaling for new impact compensation
+
+IMPACT_V2_DAMAGE_CAP[0]=0.6
+IMPACT_V2_DAMAGE_CAP[1]=0.5
+IMPACT_V2_DAMAGE_CAP[3]=0.4
+IMPACT_V2_DAMAGE_CAP[3]=0.4
+
+IMPACT_V2_PCT_DR[3]=0.2
+IMPACT_V2_PCT_DR[3]=0.4
+IMPACT_V2_PCT_DR[3]=0.75
+IMPACT_V2_PCT_DR[3]=0.75
 
 SHIELD_ALLY_PCT_DR=0.67
 
