Tweak rocket launcher firing for even less jank
also patch Iridar's Disposable Rocket Launchers

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -115,6 +115,8 @@ bEnableCityHQs = true
 ; +ROCKET_ABILITIES_TO_UPDATE = YourAbilityHere
  +ROCKET_ABILITIES_TO_UPDATE = IRI_FireRocket
  +ROCKET_ABILITIES_TO_UPDATE = IRI_FireRocket_Spark
+ +ROCKET_ABILITIES_TO_UPDATE = IRI_FireRPG
+ 
 
 ; ------------------------------------------------------------------
 ; ------------------ Replacement Mission Defs ----------------------
