Duplicate non-scaling Enhanced Layered Armor for XCOM use

--- a/LongWarOfTheChosen/Config/XComClassData.ini
+++ b/LongWarOfTheChosen/Config/XComClassData.ini
@@ -2093,7 +2093,7 @@ bHasClassMovie=true
 								(AbilityName="Failsafe", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon), \\
 								(AbilityName="AdvancedLogic_LW"), \\
 								(AbilityName="Intimidate"), \\
-								(AbilityName="ImpactCompensationV2_LW") \\
+								(AbilityName="ImpactCompensationV2XCOM_LW") \\
 					))
 
 +RandomAbilityDecks=(DeckName="Rank2_XComAbilities", \\
