--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -1075,6 +1075,18 @@ IMPACT_V2_PCT_DR[3]=0.4
 IMPACT_V2_PCT_DR[3]=0.75
 IMPACT_V2_PCT_DR[3]=0.75
 
+; XCOM version
+
+IMPACT_V2XCOM_DAMAGE_CAP[0]=0.4
+IMPACT_V2XCOM_DAMAGE_CAP[1]=0.4
+IMPACT_V2XCOM_DAMAGE_CAP[2]=0.4
+IMPACT_V2XCOM_DAMAGE_CAP[3]=0.4
+
+IMPACT_V2XCOM_PCT_DR[0]=0.75
+IMPACT_V2XCOM_PCT_DR[1]=0.75
+IMPACT_V2XCOM_PCT_DR[2]=0.75
+IMPACT_V2XCOM_PCT_DR[3]=0.75
+
 SHIELD_ALLY_PCT_DR=0.67
 
 UNSTOPPABLE_MIN_MOB = 7
