--- a/LongWarOfTheChosen/Config/XComGameData_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComGameData_SoldierSkills.ini
@@ -96,6 +96,8 @@ GET_OVER_HERE_MAX_RANGE=768;  8 tiles in units
 [XComGame.XComGameState_Effect_TemplarFocus]
 +IncreaseFocusAbilities="SupremeFocus"
 +IncreaseFocusAbilities="SuperGigaOmegaFocus"
++IncreaseFocusAbilities="SupremeFocus2"
++IncreaseFocusAbilities="DeepFocus2"
 
 [XComGame.X2Ability_ReaperAbilitySet]
 ShadowMobilityMod=1.0
