Comment out some nonexistent behaviors now
leftover from LEU change.

--- a/LongWarOfTheChosen/Config/XComAI.ini
+++ b/LongWarOfTheChosen/Config/XComAI.ini
@@ -657,8 +657,8 @@ MAX_SURPRISED_SCAMPER_PATH_LENGTH=7		; Scamper paths longer than this number of 
 +Behaviors=(BehaviorName=TargetKillableOrFlanked, NodeType=Selector, Child[0]=TargetIsKillable,  Child[1]=IsFlankingTargetWithoutShield)
 
 ; -------------- High priority target shooting (LEU Version) (shoot if kill or target flanked/exposed) -------------
-+Behaviors=(BehaviorName=TryHighPriorityLEU, NodeType=Sequence, Child[0]=IsAbilityAvailable-LightEmUp, Child[1]=HaveHighPriorityLEUTarget, Child[2]=LEUIfAvailable)
-+Behaviors=(BehaviorName=HaveHighPriorityLEUTarget, NodeType=Sequence, Child[0]=SetTargetStack-LightEmUp, Child[1]=FindHighPriorityTarget, Child[2]=HasValidTarget-LightEmUp)
+;+Behaviors=(BehaviorName=TryHighPriorityLEU, NodeType=Sequence, Child[0]=IsAbilityAvailable-LightEmUp, Child[1]=HaveHighPriorityLEUTarget, Child[2]=LEUIfAvailable)
+;+Behaviors=(BehaviorName=HaveHighPriorityLEUTarget, NodeType=Sequence, Child[0]=SetTargetStack-LightEmUp, Child[1]=FindHighPriorityTarget, Child[2]=HasValidTarget-LightEmUp)
 ;+Behaviors=(BehaviorName=FindHighPriorityTarget, NodeType=RepeatUntilFail, Child[0]=NotHighPriorityEvaluateTarget)
 ;+Behaviors=(BehaviorName=NotHighPriorityEvaluateTarget, NodeType=Sequence, Child[0]=SetNextTarget, Child[1]=TargetIsNotHighPriority)
 ;+Behaviors=(BehaviorName=TargetIsNotHighPriority, NodeType=Inverter, Child[0]=TargetIsHighPriority)
