--- a/LongWarOfTheChosen/Config/XComEncounters.ini
+++ b/LongWarOfTheChosen/Config/XComEncounters.ini
@@ -1365,6 +1365,7 @@
 ;----------------------------------------------------------------
 
 
+; NOTE: This encounter is hardcoded in Kismet for the mission, you can't replace it on the schedule or you break the RNFs
 +ConfigurableEncounters=(EncounterID="GP_Fortress_AvatarGroup_First_LW", \\
 					 MaxSpawnCount=8, \\
 					 OffsetForceLevel=0, \\
@@ -1659,7 +1660,7 @@
 ;----------Avatar Groups-----------
 +ConfigurableEncounters=(EncounterID="GP_Fortress_AvatarTeam_A_LW", \\
 					 ReinforcementCountdown=0, \\
-					 MaxSpawnCount=8, \\
+					 MaxSpawnCount=9, \\
 					 ForceSpawnTemplateNames[0]="AdvPsiWitchM3", \\
 					 ForceSpawnTemplateNames[1]="Cyberus", \\
 					 ForceSpawnTemplateNames[2]="Cyberus", \\
@@ -1668,6 +1669,7 @@
 					 ForceSpawnTemplateNames[5]="Faceless", \\
 					 ForceSpawnTemplateNames[6]="Faceless", \\
 					 ForceSpawnTemplateNames[7]="Faceless", \\
+					 ForceSpawnTemplateNames[8]="Faceless", \\
 					 bGroupDoesNotAwardLoot=true)
 
 +ConfigurableEncounters=(EncounterID="GP_Fortress_AvatarTeam_B_LW", \\
@@ -1710,28 +1712,30 @@
 					 ForceSpawnTemplateNames[1]="Andromedon", \\
 					 ForceSpawnTemplateNames[2]="Andromedon", \\
 					 ForceSpawnTemplateNames[3]="SectoidM2_LW", \\
-					 ForceSpawnTemplateNames[4]="Sectoid", \\
+					 ForceSpawnTemplateNames[4]="AdvPriestM3", \\
 					 ForceSpawnTemplateNames[5]="MutonM2_LW", \\
 					 bGroupDoesNotAwardLoot=true)
 
-+ConfigurableEncounters=(EncounterID="GP_Fortress_AvatarTeam_F", \\
++ConfigurableEncounters=(EncounterID="GP_Fortress_AvatarTeam_F_LW", \\
 					 ReinforcementCountdown=0, \\
-					 MaxSpawnCount=5, \\
+					 MaxSpawnCount=6, \\
 					 ForceSpawnTemplateNames[0]="AdvPsiWitchM3", \\
 					 ForceSpawnTemplateNames[1]="SpectreM2", \\
 					 ForceSpawnTemplateNames[2]="SpectreM2", \\
 					 ForceSpawnTemplateNames[3]="MutonM3_LW", \\
-					 ForceSpawnTemplateNames[4]="Muton", \\
+					 ForceSpawnTemplateNames[4]="AdvVanguard", \\
+					 ForceSpawnTemplateNames[5]="Muton", \\
 					 bGroupDoesNotAwardLoot=true)
 					 
-+ConfigurableEncounters=(EncounterID="GP_Fortress_AvatarTeam_G", \\
++ConfigurableEncounters=(EncounterID="GP_Fortress_AvatarTeam_G_LW", \\
 					 ReinforcementCountdown=0, \\
-					 MaxSpawnCount=5, \\
+					 MaxSpawnCount=6, \\
 					 ForceSpawnTemplateNames[0]="AdvPsiWitchM3", \\
 					 ForceSpawnTemplateNames[1]="AdvPriestM3", \\
 					 ForceSpawnTemplateNames[2]="AdvPriestM3", \\
 					 ForceSpawnTemplateNames[3]="SpectreM2", \\
 					 ForceSpawnTemplateNames[4]="SpectreM1", \\
+					 ForceSpawnTemplateNames[5]="Cyberus", \\
 					 bGroupDoesNotAwardLoot=true)
 
 ;----------Purge Groups-----------
@@ -1843,6 +1847,22 @@
 					 ForceSpawnTemplateNames[2]="AdvMECArcherM2", \\
 					 bGroupDoesNotAwardLoot=true)
 
++ConfigurableEncounters=(EncounterID="Showdown_T2RNF_SpectreSwarm_LW", \\
+					 ReinforcementCountdown=0, \\
+					 MaxSpawnCount=3, \\
+					 ForceSpawnTemplateNames[0]="SpectreM2", \\
+					 ForceSpawnTemplateNames[1]="SpectreM2", \\
+					 ForceSpawnTemplateNames[2]="SpectreM2", \\
+					 bGroupDoesNotAwardLoot=true)
+					 
++ConfigurableEncounters=(EncounterID="Showdown_T2RNF_PriestSwarm_LW", \\
+					 ReinforcementCountdown=0, \\
+					 MaxSpawnCount=3, \\
+					 ForceSpawnTemplateNames[0]="AdvPriestM3", \\
+					 ForceSpawnTemplateNames[1]="AdvPriestM3", \\
+					 ForceSpawnTemplateNames[2]="AdvPriestM3", \\
+					 bGroupDoesNotAwardLoot=true)					 
+
 ;----------Tier 1 Groups-----------
 +ConfigurableEncounters=(EncounterID="Showdown_T1RNF_ViperSwarm_LW", \\
 					 ReinforcementCountdown=0, \\
@@ -1854,10 +1874,11 @@
 
 +ConfigurableEncounters=(EncounterID="Showdown_T1RNF_SectoidSwarm_LW", \\
 					 ReinforcementCountdown=0, \\
-					 MaxSpawnCount=3, \\
+					 MaxSpawnCount=4, \\
 					 ForceSpawnTemplateNames[0]="SectoidM2_LW", \\
 					 ForceSpawnTemplateNames[1]="SectoidM2_LW", \\
-					 ForceSpawnTemplateNames[2]="Sectoid", \\
+					 ForceSpawnTemplateNames[2]="SectoidM2_LW", \\
+					 ForceSpawnTemplateNames[3]="Sectoid", \\
 					 bGroupDoesNotAwardLoot=true)
 
 +ConfigurableEncounters=(EncounterID="Showdown_T1RNF_MutonSwarm_LW", \\
@@ -1870,18 +1891,19 @@
 
 +ConfigurableEncounters=(EncounterID="Showdown_T1RNF_ChryssalidSwarm_LW", \\
 					 ReinforcementCountdown=0, \\
-					 MaxSpawnCount=3, \\
+					 MaxSpawnCount=4, \\
 					 ForceSpawnTemplateNames[0]="ChryssalidSoldier", \\
 					 ForceSpawnTemplateNames[1]="ChryssalidSoldier", \\
 					 ForceSpawnTemplateNames[2]="Chryssalid", \\
+					 ForceSpawnTemplateNames[3]="Chryssalid", \\
 					 bGroupDoesNotAwardLoot=true)
 
-+ConfigurableEncounters=(EncounterID="Showdown_T1RNF_FacelessSwarm_LW", \\
++ConfigurableEncounters=(EncounterID="Showdown_T1RNF_AdvSwarm_LW", \\
 					 ReinforcementCountdown=0, \\
 					 MaxSpawnCount=3, \\
-					 ForceSpawnTemplateNames[0]="Faceless", \\
-					 ForceSpawnTemplateNames[1]="Faceless", \\
-					 ForceSpawnTemplateNames[2]="Faceless", \\
+					 ForceSpawnTemplateNames[0]="AdvCommando", \\
+					 ForceSpawnTemplateNames[1]="AdvVanguard", \\
+					 ForceSpawnTemplateNames[2]="AdvShockTroop", \\
 					 bGroupDoesNotAwardLoot=true)
 
 +ConfigurableEncounters=(EncounterID="Showdown_T1RNF_CodexSwarm_LW", \\
