--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -116,6 +116,11 @@ bEnableCityHQs = true
  +ROCKET_ABILITIES_TO_UPDATE = IRI_FireRocket
  +ROCKET_ABILITIES_TO_UPDATE = IRI_FireRocket_Spark
 
+
+; This will OPTC the stage 1 waterworld to LW's udpated one and patch the current mission to it. Will also need the console command to clear cache.
+; Disable this if you are using another mod that swaps golden path kismet.
+bUpdateWaterworldLW = true
+
 ; ------------------------------------------------------------------
 ; ------------------ Replacement Mission Defs ----------------------
 ; ------------------------------------------------------------------
@@ -247,8 +252,8 @@ bEnableCityHQs = true
 				  EncounterIDs[1]=(EncounterID="Showdown_T2RNF_AndromedonSwarm_LW"), \\
 				  EncounterIDs[2]=(EncounterID="Showdown_T2RNF_ArchonSwarm_LW"), \\
 				  EncounterIDs[3]=(EncounterID="Showdown_T2RNF_MECSwarm_LW"), \\
-				  EncounterIDs[4]=(EncounterID="Showdown_T2RNF_SpectreSwarm"), \\
-				  EncounterIDs[5]=(EncounterID="Showdown_T2RNF_PriestSwarm"), \\
+				  EncounterIDs[4]=(EncounterID="Showdown_T2RNF_SpectreSwarm_LW"), \\
+				  EncounterIDs[5]=(EncounterID="Showdown_T2RNF_PriestSwarm_LW"), \\
 				  )
 
 +ReplacementEncounterBuckets=(EncounterBucketID="LIST_FinalShowdown_T1RNF", \\
@@ -257,7 +262,7 @@ bEnableCityHQs = true
 				  EncounterIDs[1]=(EncounterID="Showdown_T1RNF_SectoidSwarm_LW"), \\
 				  EncounterIDs[2]=(EncounterID="Showdown_T1RNF_MutonSwarm_LW"), \\
 				  EncounterIDs[3]=(EncounterID="Showdown_T1RNF_ChryssalidSwarm_LW"), \\
-				  EncounterIDs[4]=(EncounterID="Showdown_T1RNF_FacelessSwarm_LW"), \\
+				  EncounterIDs[4]=(EncounterID="Showdown_T1RNF_AdvSwarm_LW"), \\
 				  EncounterIDs[5]=(EncounterID="Showdown_T1RNF_CodexSwarm_LW"), \\
 				  )
 
