--- a/LongWarOfTheChosen/Config/XComMissionDefs.ini
+++ b/LongWarOfTheChosen/Config/XComMissionDefs.ini
@@ -2212,7 +2212,7 @@
 
 +arrMissions=(MissionName="AssaultAlienFortress_LW", sType="GP_Fortress_LW", \\
 	MissionFamily="GoldenPath5_LW", \\
-	MapNames[0]="Obj_FortressLeadup", \\
+	MapNames[0]="Obj_FortressLeadup_LW", \\
 	RequiredPlotObjectiveTags[0]="FacilityLeadup", \\
 	RequiredParcelObjectiveTags[0]="FortressLeadup", \\
 	MissionObjectives[0]=(ObjectiveName="Sweep", \\
@@ -2231,6 +2231,26 @@
 	ForcedTacticalTags[0]="NoVolunteerArmy", \\
 	ForcedTacticalTags[1]="NoDoubleAgent", \\
 	MaxSoldiers=12)
+
++arrMissions=(MissionName="DestroyAvatarProject_LW", sType="GP_FortressShowdown_LW", \\
+	MissionFamily="DestroyAvatarProject_LW", \\
+	MapNames[0]="Obj_FortressShowdown_LW", \\
+	MapNames[1]="CIN_Fortress_Victory", \\
+	OverrideDefaultMissionIntro=true, \\
+	MissionIntroOverride=( \\
+		MatineePackage="CIN_Fortress_AvatarRevealSplit", \\
+		MatineeSequences[0]=(MatineeCommentPrefixes[0]="FortressAvatarBegin"), \\
+		MatineeBaseTag="FortressAvatarRevealSpawnBase"), \\
+	RequiredPlotObjectiveTags[0]="FacilityShowdown", \\
+	RequiredParcelObjectiveTags[0]="FortressShowdown", \\
+	MissionObjectives[0]=(ObjectiveName="Sweep", \\
+	bIsTacticalObjective=true, bIsStrategyObjective=true, bIsTriadObjective=true), \\
+	MissionSchedules[0]="Campaign_Fortress_Showdown_LW", \\
+	Difficulty=2, \\
+	AllowDeployWoundedUnits=true, \\
+	ForcedTacticalTags[0]="NoVolunteerArmy", \\
+	ForcedTacticalTags[1]="NoDoubleAgent", \\
+	)
 
 ; Overhaul New Mission types
 
