--- a/LongWarOfTheChosen/Config/XComMissions.ini
+++ b/LongWarOfTheChosen/Config/XComMissions.ini
@@ -246,3 +246,41 @@ SecurityAlarmed=5
 SecurityOnAlert=8 
 ; RNF call whenever possible at Max Alert
 SecurityMaxAlert=10
+
+[AvatarShowdown]
+; Avatar Count --
+; There's one Avatar on the board, and the mission checks for additional Avatars 9 times.  The theoretical max is 19 avatars, if the number is larger than this
+; the mission would be impossible to complete.
+AvatarsToKill_Rookie=3
+AvatarsToKill_Veteran=3
+AvatarsToKill_Commander=3
+AvatarsToKill_Legend=3
+; Number of large Avatar groups (two Avatars in a single RNF summon). Max large groups is 9, anything beyond this has no effect.
+; If avatars to kill is greater than 10 and there aren't enough large groups to deploy that many, the mission becomes impossible.
+LargeAvatarGroups_Rookie=0
+LargeAvatarGroups_Veteran=0
+LargeAvatarGroups_Commander=0
+LargeAvatarGroups_Legend=0
+
+; LW custom units aren't counted right now
+
+; Unit caps ----
+Tier1RNFCap_Rookie=40
+Tier1RNFCap_Veteran=40
+Tier1RNFCap_Commander=40
+Tier1RNFCap_Legend=60
+; Tier 2 units
+Tier2RNFCap_Rookie=20
+Tier2RNFCap_Veteran=20
+Tier2RNFCap_Commander=20
+Tier2RNFCap_Legend=40
+; Tier 3 units
+Tier3RNFCap_Rookie=20
+Tier3RNFCap_Veteran=20
+Tier3RNFCap_Commander=20
+Tier3RNFCap_Legend=30
+; Purge units
+Tier4RNFCap_Rookie=80
+Tier4RNFCap_Veteran=80
+Tier4RNFCap_Commander=80
+Tier4RNFCap_Legend=80
