--- a/LongWarOfTheChosen/Config/XComSchedules.ini
+++ b/LongWarOfTheChosen/Config/XComSchedules.ini
@@ -14340,13 +14340,13 @@
 				  EncounterZonePatrolDepth=4.0, \\
 					DefaultEncounterLeaderSpawnList="DefaultLeaders_LW", \\
 					DefaultEncounterFollowerSpawnList="DefaultFollowers_LW", \\
-				  PrePlacedEncounters[0]=(EncounterID="GP_Fortress_MidBossAdds_B_LW", EncounterZoneOffsetAlongLOP=105.0, EncounterZoneWidth=44.0), \\
-				  PrePlacedEncounters[1]=(EncounterID="GP_Fortress_MidBoss_01a_LW", EncounterZoneOffsetAlongLOP=91.0, EncounterZoneWidth=12.0), \\
-				  PrePlacedEncounters[2]=(EncounterID="GP_Fortress_MidBossAdds_E_LW", EncounterZoneOffsetAlongLOP=77.0, EncounterZoneWidth=24.0), \\
-				  PrePlacedEncounters[3]=(EncounterID="GP_Fortress_Midswarm_A_LW", EncounterZoneOffsetAlongLOP=63.0, EncounterZoneWidth=24.0), \\
-				  PrePlacedEncounters[4]=(EncounterID="GP_Fortress_MidBossAdds_C_LW", EncounterZoneOffsetAlongLOP=49.0, EncounterZoneWidth=44.0), \\
-				  PrePlacedEncounters[5]=(EncounterID="GP_Fortress_MidBoss_02a_LW", EncounterZoneOffsetAlongLOP=35.0, EncounterZoneWidth=24.0), \\
-				  PrePlacedEncounters[6]=(EncounterID="GP_Fortress_MidBossAdds_F_LW", EncounterZoneOffsetAlongLOP=21.0, EncounterZoneWidth=8.0), \\
+				  PrePlacedEncounters[0]=(EncounterID="GP_Fortress_MidBossAdds_B_LW", EncounterZoneOffsetAlongLOP=85.0, EncounterZoneWidth=44.0), \\
+				  PrePlacedEncounters[1]=(EncounterID="GP_Fortress_MidBoss_01a_LW", EncounterZoneOffsetAlongLOP=71.0, EncounterZoneWidth=12.0), \\
+				  PrePlacedEncounters[2]=(EncounterID="GP_Fortress_MidBossAdds_E_LW", EncounterZoneOffsetAlongLOP=57.0, EncounterZoneWidth=24.0), \\
+				  PrePlacedEncounters[3]=(EncounterID="GP_Fortress_Midswarm_A_LW", EncounterZoneOffsetAlongLOP=43.0, EncounterZoneWidth=24.0), \\
+				  PrePlacedEncounters[4]=(EncounterID="GP_Fortress_MidBossAdds_C_LW", EncounterZoneOffsetAlongLOP=29.0, EncounterZoneWidth=44.0), \\
+				  PrePlacedEncounters[5]=(EncounterID="GP_Fortress_MidBoss_02a_LW", EncounterZoneOffsetAlongLOP=15.0, EncounterZoneWidth=24.0), \\
+				  PrePlacedEncounters[6]=(EncounterID="GP_Fortress_MidBossAdds_F_LW", EncounterZoneOffsetAlongLOP=1.0, EncounterZoneWidth=8.0), \\
 				  MinRequiredAlertLevel=1, \\
 				  MaxRequiredAlertLevel=1000)
 
@@ -14359,13 +14359,13 @@
 				  EncounterZonePatrolDepth=4.0, \\
 					DefaultEncounterLeaderSpawnList="DefaultLeaders_LW", \\
 					DefaultEncounterFollowerSpawnList="DefaultFollowers_LW", \\
-				  PrePlacedEncounters[0]=(EncounterID="GP_Fortress_MidBossAdds_A_LW", EncounterZoneOffsetAlongLOP=105.0, EncounterZoneWidth=44.0), \\
-				  PrePlacedEncounters[1]=(EncounterID="GP_Fortress_MidBoss_01B_LW", EncounterZoneOffsetAlongLOP=91.0, EncounterZoneWidth=12.0), \\
-				  PrePlacedEncounters[2]=(EncounterID="GP_Fortress_MidBossAdds_G_LW", EncounterZoneOffsetAlongLOP=77.0, EncounterZoneWidth=24.0), \\
-				  PrePlacedEncounters[3]=(EncounterID="GP_Fortress_Midswarm_B_LW", EncounterZoneOffsetAlongLOP=63.0, EncounterZoneWidth=24.0), \\
-				  PrePlacedEncounters[4]=(EncounterID="GP_Fortress_MidBossAdds_E_LW", EncounterZoneOffsetAlongLOP=49.0, EncounterZoneWidth=44.0), \\
-				  PrePlacedEncounters[5]=(EncounterID="GP_Fortress_MidBoss_02B_LW", EncounterZoneOffsetAlongLOP=35.0, EncounterZoneWidth=24.0), \\
-				  PrePlacedEncounters[6]=(EncounterID="GP_Fortress_MidBossAdds_I_LW", EncounterZoneOffsetAlongLOP=21.0, EncounterZoneWidth=8.0), \\
+				  PrePlacedEncounters[0]=(EncounterID="GP_Fortress_MidBossAdds_A_LW", EncounterZoneOffsetAlongLOP=85.0, EncounterZoneWidth=44.0), \\
+				  PrePlacedEncounters[1]=(EncounterID="GP_Fortress_MidBoss_01B_LW", EncounterZoneOffsetAlongLOP=71.0, EncounterZoneWidth=12.0), \\
+				  PrePlacedEncounters[2]=(EncounterID="GP_Fortress_MidBossAdds_G_LW", EncounterZoneOffsetAlongLOP=57.0, EncounterZoneWidth=24.0), \\
+				  PrePlacedEncounters[3]=(EncounterID="GP_Fortress_Midswarm_B_LW", EncounterZoneOffsetAlongLOP=43.0, EncounterZoneWidth=24.0), \\
+				  PrePlacedEncounters[4]=(EncounterID="GP_Fortress_MidBossAdds_E_LW", EncounterZoneOffsetAlongLOP=29.0, EncounterZoneWidth=44.0), \\
+				  PrePlacedEncounters[5]=(EncounterID="GP_Fortress_MidBoss_02B_LW", EncounterZoneOffsetAlongLOP=15.0, EncounterZoneWidth=24.0), \\
+				  PrePlacedEncounters[6]=(EncounterID="GP_Fortress_MidBossAdds_I_LW", EncounterZoneOffsetAlongLOP=1.0, EncounterZoneWidth=8.0), \\
 				  MinRequiredAlertLevel=1, \\
 				  MaxRequiredAlertLevel=1000)
 
@@ -14378,13 +14378,13 @@
 				  EncounterZonePatrolDepth=4.0, \\
 					DefaultEncounterLeaderSpawnList="DefaultLeaders_LW", \\
 					DefaultEncounterFollowerSpawnList="DefaultFollowers_LW", \\
-				  PrePlacedEncounters[0]=(EncounterID="GP_Fortress_MidBossAdds_F_LW", EncounterZoneOffsetAlongLOP=105.0, EncounterZoneWidth=44.0), \\
-				  PrePlacedEncounters[1]=(EncounterID="GP_Fortress_MidBoss_01c_LW", EncounterZoneOffsetAlongLOP=91.0, EncounterZoneWidth=12.0), \\
-				  PrePlacedEncounters[2]=(EncounterID="GP_Fortress_MidBossAdds_A_LW", EncounterZoneOffsetAlongLOP=77.0, EncounterZoneWidth=24.0), \\
-				  PrePlacedEncounters[3]=(EncounterID="GP_Fortress_Midswarm_C_LW", EncounterZoneOffsetAlongLOP=63.0, EncounterZoneWidth=24.0), \\
-				  PrePlacedEncounters[4]=(EncounterID="GP_Fortress_MidBossAdds_E_LW", EncounterZoneOffsetAlongLOP=49.0, EncounterZoneWidth=44.0), \\
-				  PrePlacedEncounters[5]=(EncounterID="GP_Fortress_MidBoss_02c_LW", EncounterZoneOffsetAlongLOP=35.0, EncounterZoneWidth=24.0), \\
-				  PrePlacedEncounters[6]=(EncounterID="GP_Fortress_MidBossAdds_B_LW", EncounterZoneOffsetAlongLOP=21.0, EncounterZoneWidth=8.0), \\
+				  PrePlacedEncounters[0]=(EncounterID="GP_Fortress_MidBossAdds_F_LW", EncounterZoneOffsetAlongLOP=85.0, EncounterZoneWidth=44.0), \\
+				  PrePlacedEncounters[1]=(EncounterID="GP_Fortress_MidBoss_01c_LW", EncounterZoneOffsetAlongLOP=71.0, EncounterZoneWidth=12.0), \\
+				  PrePlacedEncounters[2]=(EncounterID="GP_Fortress_MidBossAdds_A_LW", EncounterZoneOffsetAlongLOP=57.0, EncounterZoneWidth=24.0), \\
+				  PrePlacedEncounters[3]=(EncounterID="GP_Fortress_Midswarm_C_LW", EncounterZoneOffsetAlongLOP=43.0, EncounterZoneWidth=24.0), \\
+				  PrePlacedEncounters[4]=(EncounterID="GP_Fortress_MidBossAdds_E_LW", EncounterZoneOffsetAlongLOP=29.0, EncounterZoneWidth=44.0), \\
+				  PrePlacedEncounters[5]=(EncounterID="GP_Fortress_MidBoss_02c_LW", EncounterZoneOffsetAlongLOP=15.0, EncounterZoneWidth=24.0), \\
+				  PrePlacedEncounters[6]=(EncounterID="GP_Fortress_MidBossAdds_B_LW", EncounterZoneOffsetAlongLOP=1.0, EncounterZoneWidth=8.0), \\
 				  MinRequiredAlertLevel=1, \\
 				  MaxRequiredAlertLevel=1000)
 
@@ -14397,13 +14397,26 @@
 				  EncounterZonePatrolDepth=4.0, \\
 					DefaultEncounterLeaderSpawnList="DefaultLeaders_LW", \\
 					DefaultEncounterFollowerSpawnList="DefaultFollowers_LW", \\
-				  PrePlacedEncounters[0]=(EncounterID="GP_Fortress_MidBossAdds_G_LW", EncounterZoneOffsetAlongLOP=105.0, EncounterZoneWidth=44.0), \\
-				  PrePlacedEncounters[1]=(EncounterID="GP_Fortress_MidBoss_01d_LW", EncounterZoneOffsetAlongLOP=91.0, EncounterZoneWidth=12.0), \\
-				  PrePlacedEncounters[2]=(EncounterID="GP_Fortress_MidBossAdds_D_LW", EncounterZoneOffsetAlongLOP=77.0, EncounterZoneWidth=24.0), \\
-				  PrePlacedEncounters[3]=(EncounterID="GP_Fortress_Midswarm_D_LW", EncounterZoneOffsetAlongLOP=63.0, EncounterZoneWidth=24.0), \\
-				  PrePlacedEncounters[4]=(EncounterID="GP_Fortress_MidBossAdds_A_LW", EncounterZoneOffsetAlongLOP=49.0, EncounterZoneWidth=44.0), \\
-				  PrePlacedEncounters[5]=(EncounterID="GP_Fortress_MidBoss_02d_LW", EncounterZoneOffsetAlongLOP=35.0, EncounterZoneWidth=24.0), \\
-				  PrePlacedEncounters[6]=(EncounterID="GP_Fortress_MidBossAdds_F_LW", EncounterZoneOffsetAlongLOP=21.0, EncounterZoneWidth=8.0), \\
+				  PrePlacedEncounters[0]=(EncounterID="GP_Fortress_MidBossAdds_G_LW", EncounterZoneOffsetAlongLOP=85.0, EncounterZoneWidth=44.0), \\
+				  PrePlacedEncounters[1]=(EncounterID="GP_Fortress_MidBoss_01d_LW", EncounterZoneOffsetAlongLOP=71.0, EncounterZoneWidth=12.0), \\
+				  PrePlacedEncounters[2]=(EncounterID="GP_Fortress_MidBossAdds_D_LW", EncounterZoneOffsetAlongLOP=57.0, EncounterZoneWidth=24.0), \\
+				  PrePlacedEncounters[3]=(EncounterID="GP_Fortress_Midswarm_D_LW", EncounterZoneOffsetAlongLOP=43.0, EncounterZoneWidth=24.0), \\
+				  PrePlacedEncounters[4]=(EncounterID="GP_Fortress_MidBossAdds_A_LW", EncounterZoneOffsetAlongLOP=29.0, EncounterZoneWidth=44.0), \\
+				  PrePlacedEncounters[5]=(EncounterID="GP_Fortress_MidBoss_02d_LW", EncounterZoneOffsetAlongLOP=15.0, EncounterZoneWidth=24.0), \\
+				  PrePlacedEncounters[6]=(EncounterID="GP_Fortress_MidBossAdds_F_LW", EncounterZoneOffsetAlongLOP=1.0, EncounterZoneWidth=8.0), \\
+				  MinRequiredAlertLevel=1, \\
+				  MaxRequiredAlertLevel=1000)
+
++MissionSchedules=(ScheduleID="Campaign_Fortress_Showdown_LW", \\
+				  ExcludeTacticalTag="DisableStandardSchedules", \\
+				  XComSquadStartsConcealed=false, \\
+				  IdealXComSpawnDistance=70, \\
+				  MinXComSpawnDistance=1, \\
+				  AlienToAdventLeaderRatio=1.00, \\
+				  AlienToAdventFollowerRatio=1.00, \\
+				  EncounterZonePatrolDepth=4.0, \\
+				  bForceReselectAllGroupsForSpawn=true, \\
+				  PrePlacedEncounters[0]=(EncounterID="GP_Fortress_AvatarGroup_First_LW", SpawnLocationActorTag="AvatarLocation_01", EncounterZoneOffsetAlongLOP=-14.0, EncounterZoneWidth=6.0), \\
 				  MinRequiredAlertLevel=1, \\
 				  MaxRequiredAlertLevel=1000)
 
