update respec config comment

--- a/LongWarOfTheChosen/Config/XComGameData.ini
+++ b/LongWarOfTheChosen/Config/XComGameData.ini
@@ -72,7 +72,7 @@ XComHeadquarters_DefaultTrainRookieDays[1]=7	; Normal
 XComHeadquarters_DefaultTrainRookieDays[2]=10	;Classic
 XComHeadquarters_DefaultTrainRookieDays[3]=12	;Impossible
 
-; This is multiplied per rank!
+; Half of this is multiplied per rank! for example difficulty 2 makes respeccing take 2 days per rank. Values must be integers
 XComHeadquarters_DefaultRespecSoldierDays[0]=3
 XComHeadquarters_DefaultRespecSoldierDays[1]=4; Normal
 XComHeadquarters_DefaultRespecSoldierDays[2]=4; Classic
