Increase max alert level for ambush schedule

--- a/LongWarOfTheChosen/Config/XComSchedules.ini
+++ b/LongWarOfTheChosen/Config/XComSchedules.ini
@@ -14944,7 +14944,7 @@
 				  DefaultEncounterLeaderSpawnList = "DefaultLeaders_LW", \\
 				  DefaultEncounterFollowerSpawnList = "DefaultFollowers_LW", \\
 				  XComSquadStartsConcealed=false, \\
-				  MinRequiredAlertLevel=3, MaxRequiredAlertLevel=3, \\
+				  MinRequiredAlertLevel=3, MaxRequiredAlertLevel=99, \\
 				  IdealXComSpawnDistance=80, \\
 				  MinXComSpawnDistance=48, \\
 				  EncounterZonePatrolDepth=4.0, \\
