--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -90,6 +90,9 @@ bEnableCityHQs = true
 +MapsToDisable=Plot_WLD_Convoy_Ravine
 +MapsToDisable=Plot_WLD_Convoy_Stream
 
+; This one is too small, unfortunately
++MapsToDisable=Plot_WLD_Advent_MdObj_Voz_1C 
+
 ; Add encounter names here to exclude from the LW diversity system:
 
 +EncountersToExclude=MOCXDummiesX4
